# BTCPayServer/Controllers/GreenField/GreenfieldAppsController.cs
@@ -164,6 +164,7 @@ namespace BTCPayServer.Controllers.Greenfield
                 EmbeddedCSS = request.EmbeddedCSS,
                 RedirectAutomatically = request.RedirectAutomatically,
                 RequiresRefundEmail = BoolToRequiresRefundEmail(request.RequiresRefundEmail) ?? RequiresRefundEmail.InheritFromStore,
+                CheckoutFormId = request.CheckoutFormId
             };
         }
 
