# BTCPayServer/wwwroot/swagger/v1/swagger.template.invoices.json
@@ -1054,6 +1054,11 @@
                         "nullable": true,
                         "description": "Invoice will require user to provide a refund email if this option is set to `true`. Has no effect if `buyerEmail` metadata is set as there is no email to collect in this case."
                     },
+                    "checkoutFormId": {
+                        "type": "string",
+                        "description": "Form ID to request customer data, in case the new checkout is used",
+                        "nullable": true
+                    },
                     "defaultLanguage": {
                         "type": "string",
                         "nullable": true,
